--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": ["es2015", "stage-2"],
   "plugins": [
-    "transform-flow-strip-types",
+    "transform-flow-comments",
     "transform-object-rest-spread",
     "syntax-trailing-function-commas",
     ["module-resolver", {
