--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "lambdanwang",
-  "version": "1.0.3",
+  "version": "1.0.6",
   "main": "dist/index.js",
   "scripts": {
     "flow": "flow",
     "lint": "eslint src",
     "jest": "jest --config jestconfig.json",
-    "build": "cp package.json ./dist && babel ./src --out-dir ./dist/ --ignore '**/__tests__/*.js'",
+    "build": "yarn transpile && yarn copy-packagejson && yarn copy-flow",
+    "transpile": "babel ./src --out-dir ./dist/ --ignore '**/__tests__/*.js'",
+    "copy-packagejson": "cp package.json ./dist",
+    "copy-flow": "cd src && pax -wrs'/\\.js$/\\.js\\.flow/' *.js ../dist",
     "test": "yarn flow && yarn lint && yarn jest"
   },
   "license": "MIT",
@@ -17,7 +20,6 @@
     "babel-jest": "^20.0.1",
     "babel-plugin-module-resolver": "^2.7.0",
     "babel-plugin-syntax-trailing-function-commas": "^6.22.0",
-    "babel-plugin-transform-flow-comments": "^6.22.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
