(1.2.0) Upgrade flow to 0.52.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lambdanwang",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "main": "dist/index.js",
   "scripts": {
     "flow": "flow",
@@ -31,8 +31,8 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.10.3",
-    "eslint-plugin-stripe": "^1.0.2",
-    "flow-bin": "^0.46.0",
+    "eslint-plugin-stripe": "1.0.3",
+    "flow-bin": "0.52.0",
     "flow-typed": "^2.1.2",
     "jest-cli": "^20.0.1"
   }
