--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lambdanwang",
-  "version": "1.2.6",
+  "version": "1.3.2",
   "main": "dist/index.js",
   "scripts": {
     "flow": "flow",
@@ -10,12 +10,14 @@
     "transpile": "babel ./src --out-dir ./dist/ --ignore '**/__tests__/*.js'",
     "copy-packagejson": "cp package.json ./dist",
     "copy-flow": "cd src && pax -wrs'/\\.js$/\\.js\\.flow/' *.js ../dist",
-    "test": "yarn flow && yarn lint && yarn jest"
+    "test": "yarn flow && yarn lint && yarn jest",
+    "prettier": "prettier --write src/**/*.js"
   },
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
+    "babel-eslint": "^8.2.1",
     "babel-jest": "^20.0.1",
     "babel-plugin-module-resolver": "^2.7.0",
     "babel-plugin-syntax-trailing-function-commas": "^6.22.0",
@@ -24,15 +26,15 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-2": "^6.24.1",
-    "eslint": "^3.3.0",
-    "eslint-config-stripe": "^1.0.10",
-    "eslint-plugin-flowtype": "^2.33.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.10.3",
-    "eslint-plugin-stripe": "1.0.3",
-    "flow-bin": "0.61.0",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-flowtype": "^2.42.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "flow-bin": "0.64.0",
     "flow-typed": "^2.1.2",
-    "jest-cli": "^20.0.1"
+    "jest-cli": "^20.0.1",
+    "prettier": "^1.10.2"
   }
 }
