Update option tests and types

--- a/.flowconfig
+++ b/.flowconfig
@@ -2,13 +2,10 @@
 0.64.0
 
 [libs]
-src/decls/
+flow-typed
 
 [options]
 suppress_comment=\\(.\\|\n\\)*\\$ExpectError
 
 module.file_ext=.js
 module.file_ext=.json
-
-module.system.node.resolve_dirname=node_modules
-module.system.node.resolve_dirname=src
